# pcl-knn-benchmark

./: .gitignore  CMakeLists.txt  index.md  requirements.txt
comparisons/full-comparison/: index.md
configs/desktop/: 1080ti.json  5820k.json
configs/xps_15_9550/: 6300hq.json  960m.json
docs/: index.md
docs/comparisons/full-comparison/: index.md
docs/setups/desktop/1080ti/: index.md
docs/setups/desktop/5820k/: index.md
docs/setups/xps-15-9550/6300hq/: index.md
docs/setups/xps-15-9550/960m/: index.md
docs/stylesheets/: page.css
include/: base.hpp  types.hpp
include/benchmarks/: base.hpp  brute_force.hpp
include/benchmarks/kdtree/: base.hpp  kdtree_flann.hpp  kdtree_nanoflann.hpp
include/benchmarks/kdtree/cuda/: base.hpp  kdtree_flann.hpp
include/benchmarks/octree/: octree.hpp
include/benchmarks/octree/gpu/: octree.hpp
include/managers/: cloud.hpp  kdtree.hpp
results/desktop/1080ti/: build_tree.csv  nn_search.csv
results/desktop/5820k/: build_tree.csv  nn_search.csv
results/xps_15_9550/6300hq/: build_tree.csv  nn_search.csv
results/xps_15_9550/960m/: build_tree.csv  nn_search.csv
setups/desktop/5820k/: index.md
setups/xps-15-9550/6300hq/: index.md
src/: base.cpp  brute_force.cpp  kdtree_flann.cpp  octree.cpp  octree_gpu.cpp
src/benchmarks/: brute_force.cpp
src/benchmarks/kdtree/: kdtree_flann.cpp
src/benchmarks/kdtree/cuda/: kdtree_flann.cpp
src/benchmarks/octree/gpu/: octree.cpp
src/cpp/benchmarks/kdtree/: kdtree_nanoflann.cpp
src/cpp/benchmarks/octree/: octree.cpp
src/cpp/runs/: build_tree.cpp  nn_search.cpp
src/managers/: cloud.cpp
src/plots/: build_tree.py  nn_search.py  utils.py
src/python/: generate.j2  generate.py
src/python/plots/: build_tree.py  nn_search.py  utils.py
src/runs/cuda/: build_tree.cpp  nn_search.cpp
